--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "body-parser": "^1.19.2",
     "express": "^4.17.3",
     "firebase": "^9.6.7"
   }
