--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/enzotoyos/API-CRM-WS#readme",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.21",
     "dotenv": "^16.0.0",
     "nodemon": "^2.0.15",
@@ -39,6 +40,7 @@
     "apidoc": "^0.50.4",
     "body-parser": "^1.19.2",
     "express": "^4.17.3",
-    "firebase": "^9.6.7"
+    "firebase": "^9.6.7",
+    "jsonwebtoken": "^8.5.1"
   }
 }
