--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "apidoc": "^0.50.4",
     "body-parser": "^1.19.2",
     "express": "^4.17.3",
-    "firebase": "^9.6.7",
+    "firebase-admin": "^10.0.2",
     "jsonwebtoken": "^8.5.1"
   }
 }
