--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "doc": "apidoc -i ./lib/routes/ -o apidoc/",
     "test": "node ./dist/server.js",
     "start": "forever start ./dist/server.js",
-    "dev": "nodemon --verbose"
+    "dev": "nodemon --verbose",
+    "lint": "eslint . --ext .ts"
   },
   "repository": {
     "type": "git",
@@ -32,7 +33,10 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.21",
     "@types/nodemailer": "^6.4.4",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
     "dotenv": "^16.0.0",
+    "eslint": "^8.10.0",
     "nodemon": "^2.0.15",
     "tslint": "^6.1.3",
     "typescript": "^4.5.5"
