--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "no-console": "off"
+    "no-console": "warn",
+    "@typescript-eslint/no-explicit-any": "off"
   }
 }
