--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,14 @@ jobs:
         echo EMAIL_PASSWORD="${{ secrets.EMAIL_PASSWORD }}" >> .env
         cat .env
         
+    - name: Create .JSON_FIREBASE File
+      run: | 
+        cd ./config/
+        ls
+        echo "${{ secrets.KEY_FIREBASE }}" >> crm-ws-firebase-adminsdk.json
+        cat crm-ws-firebase-adminsdk.json
+        cd ..
+        
     - name: Build Project
       run: npm run build
 
