--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,9 @@ jobs:
       run: | 
         cd ./config/
         ls
-        echo "${{ secrets.KEY_FIREBASE }}" >> crm-ws-firebase-adminsdk.json
+        echo { >> crm-ws-firebase-adminsdk.json
+        echo ${{ secrets.KEY_FIREBASE }} >> crm-ws-firebase-adminsdk.json
+        echo } >> crm-ws-firebase-adminsdk.json
         cat crm-ws-firebase-adminsdk.json
         cd ..
         
