--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "firebase-admin": "^10.0.2",
     "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
+    "kourou": "^0.20.6",
     "nodemailer": "^6.7.2",
     "path": "^0.12.7",
     "uuid": "^8.3.2"
