--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "body-parser": "^1.19.2",
     "express": "^4.17.3",
     "firebase-admin": "^10.0.2",
+    "json-file-encrypt": "^2.1.2",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.2",
     "path": "^0.12.7",
