--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "express": "^4.17.3",
     "firebase-admin": "^10.0.2",
     "jsonwebtoken": "^8.5.1",
-    "kourou": "^0.20.6",
+    "kuzzle-vault": "^2.0.4",
     "nodemailer": "^6.7.2",
     "path": "^0.12.7",
     "uuid": "^8.3.2"
