--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,19 @@ jobs:
           echo EMAIL="${{ secrets.EMAIL }}" >> .env
           echo EMAIL_PASSWORD="${{ secrets.EMAIL_PASSWORD }}" >> .env
           echo KEY_ENCRYPT_FIREBASE="${{ secrets.KEY_ENCRYPT_FIREBASE }}" >> .env
-          cat .env
 
       - name: Build Project
         run: npm run build
+
+      - name: Build Documentation
+        run: npm run doc
+
+      - name: SCP Files
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          port: ${{ secrets.PORT }}
+          key: ${{ secrets.PRIV_KEY }}
+          source: "./apidoc/*"
+          target: "/var/www/apidoc/"
