--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,15 +34,15 @@ jobs:
       - name: Build Project
         run: npm run build
 
-      # - name: Build Documentation
-      #   run: npm run doc
+      - name: Build Documentation
+        run: npm run doc
 
-      # - name: SCP Files
-      #   uses: appleboy/scp-action@master
-      #   with:
-      #     host: ${{ secrets.HOST }}
-      #     username: ${{ secrets.USERNAME }}
-      #     port: ${{ secrets.PORT }}
-      #     key: ${{ secrets.PRIV_KEY }}
-      #     source: "./apidoc/*"
-      #     target: "/var/www/apidoc/"
+      - name: SCP Files
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          port: ${{ secrets.PORT }}
+          key: ${{ secrets.PRIV_KEY }}
+          source: "./apidoc/*"
+          target: "/var/www/apidoc/"
