--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,5 +45,5 @@ jobs:
           port: ${{ secrets.PORT }}
           key: ${{ secrets.PRIV_KEY }}
           source: "./apidoc/*"
-          target: "/var/www/apidoc/"
+          target: "/var/www/apidoc"
 #           target: "/home/${{ secrets.USERNAME }}/"
