--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "kuzzle-vault": "^2.0.4",
     "nodemailer": "^6.7.2",
     "path": "^0.12.7",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston-daily-rotate-file": "^4.6.1"
   }
 }
